[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "support-desk-env"
version = "1.0.0"
description = "Customer support ticket triage and response environment for AI agents"
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
keywords = ["openenv", "ai", "environment", "reinforcement-learning", "customer-support"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.10.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.entry-points."openenv.environments"]
support-desk-env = "environment:SupportDeskEnv"

[project.scripts]
support-desk-env = "app:main"
server = "app:main"

[tool.setuptools]
py-modules = [
    "app",
    "environment",
    "models",
    "tasks",
    "graders",
    "inference",
]

[tool.setuptools.packages.find]
where = ["."]

[openenv]
name = "support-desk-env"
version = "1.0.0"
spec = "openenv.yaml"
entry_point = "app:app"
tasks = ["ticket-classify", "ticket-triage", "ticket-respond"]
